# pinocchio-sample-program

./: Cargo.toml  README.md
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: functional_test.rs
